--- a/Krai_Main_Oto_V2.ioc
+++ b/Krai_Main_Oto_V2.ioc
@@ -48,8 +48,9 @@ Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.3.Priority=DMA_PRIORITY_HIGH
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=myTask01,24,2048,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,40,512,commTask,Default,NULL,Dynamic,NULL,NULL;ImuTask,41,128,ImuTask_Function,Default,NULL,Dynamic,NULL,NULL;myTask04,8,256,GUI_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.HEAP_NUMBER=4
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER
+FREERTOS.Tasks01=myTask01,48,2048,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,42,512,commTask,Default,NULL,Dynamic,NULL,NULL;ImuTask,42,128,ImuTask_Function,Default,NULL,Dynamic,NULL,NULL;myTask04,24,256,GUI_Task,Default,NULL,Static,myTask04Buffer,myTask04ControlBlock
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
