some changes code

--- a/Krai_Main_Oto_V2.ioc
+++ b/Krai_Main_Oto_V2.ioc
@@ -49,8 +49,10 @@ Dma.USART3_TX.3.Priority=DMA_PRIORITY_HIGH
 Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER
-FREERTOS.Tasks01=myTask01,48,2048,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask02,42,1024,commTask,Default,NULL,Dynamic,NULL,NULL;ImuTask,42,128,ImuTask_Function,Default,NULL,Dynamic,NULL,NULL;myTask04,24,256,GUI_Task,Default,NULL,Static,myTask04Buffer,myTask04ControlBlock
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER,Timers01,configTIMER_TASK_PRIORITY
+FREERTOS.Tasks01=KinematicTask,48,4096,DefaultTask,Default,NULL,Static,myTask01Buffer,myTask01ControlBlock;RosTask,42,1024,commTask,Default,NULL,Static,RosTaskBuffer,RosTaskControlBlock;ImuTask,42,128,ImuTask_Function,Default,NULL,Dynamic,NULL,NULL;GUI_LCD_Task,49,256,GUI_Task,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Timers01=myTimer01,Callback01,osTimerPeriodic,Default,NULL,Dynamic,NULL
+FREERTOS.configTIMER_TASK_PRIORITY=6
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -333,8 +335,8 @@ TIM1.Period=1000-1
 TIM1.Prescaler=7-1
 TIM13.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM13.IPParameters=Prescaler,Period,AutoReloadPreload
-TIM13.Period=59999
-TIM13.Prescaler=13
+TIM13.Period=49999
+TIM13.Prescaler=167
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
